2004-10-22  Roland McGrath  <roland@frob.com>

	* exec.c (check_elf_phdr): Return early on setting ENOEXEC.
	Only touch E->info.elf.phdr_addr once, on the PT_LOAD segment that
	actually contains the e_phoff location in the file.
	(do_exec): If E.info.elf.phdr_addr is zero, don't set BOOT->phdr_size.

2004-09-26  Roland McGrath  <roland@frob.com>

	* priv.h (struct execdata.info.elf): New field `phdr_addr'.
	* exec.c (check_elf): Set E->info.elf.phdr_addr here from e_phoff.
	(check_elf_phdr): Don't check for PT_PHDR, remove last two args.
	(do_exec): Update callers.  Set BOOT->phdr_addr and BOOT->phdr_size
	using info saved by check_elf.

2004-02-11  Roland McGrath  <roland@frob.com>

	* exec.c (servercopy): Change signature to avoid casted arguments.
	Update callers.
	(do_exec, S_exec_setexecdata): Update callers.

2004-02-10  Roland McGrath  <roland@frob.com>

	* elfcore.c (dump_core): Include null terminator in note name size,
	and round up to four byte alignment.
	(dump_core: write_note): Don't round OFFSET after each partial write.
	(dump_core): Don't round up to page size before writing notes.
	Do round up to page size for offset of each PT_LOAD region.

2004-01-15  Roland McGrath  <roland@frob.com>

	* priv.h (struct execdata.info.elf): Add `execstack' flag.
	* exec.c (check_elf_phdr): Set it according to PT_GNU_STACK's PF_X
	flag bit.  If no PT_GNU_STACK, default to set.
	(do_exec): If flag is clear, remove execute permission from stack.

2002-09-17  Roland McGrath  <roland@frob.com>

	* elfcore.c [i386_THREAD_STATE] (fetch_thread_regset): The two types
	are not actually identical, must rearrange some members a little.

2002-06-13  Roland McGrath  <roland@frob.com>

	* priv.h (trivfs_protid_t): Type removed (now in trivfs.h).

2002-05-29  Roland McGrath  <roland@frob.com>

	* hashexec.c (check_hashbang): Fix fs id port arg in io_identity call.

	* elfcore.c (dump_core): int -> size_t

2002-05-10  Roland McGrath  <roland@frob.com>
