@@ -1,3 +1,10 @@
+2008-06-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* elfcore.c (TIME_VALUE_TO_TIMESPEC): Completely implement instead of
+	casting `time_value *' into `struct timeval *'.
+	(dump_core): Reimplement timeradd instead of casting `time_value *'
+	into `struct timeval *'.
+
 2004-10-22  Roland McGrath  <roland@frob.com>
 
 	* exec.c (check_elf_phdr): Return early on setting ENOEXEC.
